--- a/index.html
+++ b/index.html
@@ -436,23 +436,23 @@
                         <h4>NFT marketplace UI created with Anima for Figma.</h4>
                         <h5>Join our community</h5>
                         <div class="footer__wrapper-top-left-logo">
-                            <a href="https://discord.com/"><img src="./images/icons/DiscordLogo.svg" alt=""></a>
-                            <a href="https://www.youtube.com/"><img src="./images/icons/YoutubeLogo.svg" alt=""></a>
-                            <a href="https://twitter.com/"><img src="./images/icons/TwitterLogo.svg" alt=""></a>
-                            <a href="https://www.instagram.com/"><img src="./images/icons/InstagramLogo.svg" alt=""></a>
+                            <a target="_blank" href="https://discord.com/"><img src="./images/icons/DiscordLogo.svg" alt=""></a>
+                            <a target="_blank" href="https://www.youtube.com/"><img src="./images/icons/YoutubeLogo.svg" alt=""></a>
+                            <a target="_blank" href="https://twitter.com/"><img src="./images/icons/TwitterLogo.svg" alt=""></a>
+                            <a target="_blank" href="https://www.instagram.com/"><img src="./images/icons/InstagramLogo.svg" alt=""></a>
                         </div>
                     </div>
                     <div class="footer__wrapper-top-center">
                         <h3>Explore</h3>
                         <ul class="footer__wrapper-top-center-ul">
                             <li>
-                                <a target="_blank" class="footer__wrapper-top-center-ul-a" href="#">Marketplace</a>
+                                <a class="footer__wrapper-top-center-ul-a" href="#">Marketplace</a>
                             </li>
                             <li>
-                                <a target="_blank" class="footer__wrapper-top-center-ul-a" href="#">Rankings</a>
+                                <a class="footer__wrapper-top-center-ul-a" href="#">Rankings</a>
                             </li>
                             <li>
-                                <a target="_blank" class="footer__wrapper-top-center-ul-a" href="#">Connect a wallet</a>
+                                <a class="footer__wrapper-top-center-ul-a" href="#">Connect a wallet</a>
                             </li>
                         </ul>
                     </div>
